--- a/Portfolio Website/about.html
+++ b/Portfolio Website/about.html
@@ -30,14 +30,14 @@
 <div class="aboutme">
     <p>I am currently in my second year at the University of Huddersfield studying Information Technology. I am originally from Nottinghamshire but currently living in Huddersfield for university. I am currently searching for a placement for 2023/2024. 
     </p>
-    <p>Web programming has been a passion that I have only discovered very recently but quickly became interested in. I have had an interest in programming for years using languages like Python, however they did not fully appeal to me like front-end web programming languages have. I am always learning something new developing websites which further propels my enjoyment in the process.
+    <p>Web programming has been a passion that I have only discovered very recently but quickly became interested in. I have had an interest in programming for years using languages like Python, however they did not fully appeal to me like web programming has. I am always learning something new developing websites which further propels my enjoyment in the process.
     </p>
-    <p>My other interests are playing video games, which have been a massive hobby of mine for most of my life. I also go to the gym regularly as I have began focusing on improving my self and my health over the past year by staying active. I also enjoy going out with friends to socialise and having a laugh. Furthermore, I also watch a lot of tech youtubers as I am interested in new technology coming out all of the time and how technology is evolving rapidly.
+    <p>My other interests are playing video games, which have been a massive hobby of mine for most of my life. I also go to the gym regularly as I have began focusing on improving my self and my health over the past year by staying active. I also enjoy going out with friends to socialise and having a laugh. Furthermore, I also watch a lot of tech youtubers as I am interested in the new technology that seems to be appearing more and more frequently and how technology is evolving rapidly as a whole.
     </p>
 </div>
 
 <div class="cv_link">
-    <a class="button_link" href="../links/CV_Website.pdf" download="Download .pdf">Check CV Here .pdf</a>
+    <a class="button_link" href="../links/Benjamin_Parr-Placement_CV.pdf" download="Download .pdf">Check CV Here .pdf</a>
 </div>
 
 <br>
