--- a/Portfolio Website/portfolio.html
+++ b/Portfolio Website/portfolio.html
@@ -27,6 +27,23 @@
 <br>
 <h2> Projects: </h2>
 
+<div class="sidenav-range">
+<div class="sidenav">
+    Navigate to:
+    <ul>
+    <li><input type="button" id="JavaScript" value="JavaScript" onclick="scrollJS()"></li>
+    <li><input type="button" id="PHP" value="PHP" onclick="scrollPHP()"></li>
+    <li><input type="button" id="FullStack" value="FullStack" onclick="scrollFullStack()"></li>
+    </ul>
+</div>
+</div>
+
+<br>
+<br>
+<br>
+
+<div id="scrollJS">
+<h2>JavaScript:</h2>
 <br>
 
 <h3>Endangered Animals Project:</h3>
@@ -34,25 +51,56 @@
  <img src="https://images.unsplash.com/photo-1612368195523-19e00a05b1cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" width="200" height="300" alt="orangutan">
  <p>
     This project was created during my first year of university for my Introduction to Web Programming module final assignment. I was required to create a website that contained an array of information about endangered animals, then create an interactive website through JavaScript that would let the user find out more information about each animals by selecting different options; for example selecting habitat. 
-   </p>
+</p>
 </div>
 
 <h3>Currency Converter Project:</h3>
 <div class="currency_converter">
-<img src="https://images.pexels.com/photos/5980802/pexels-photo-5980802.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" width = "200" height = "300" alt="money graph">
+<img src="https://images.pexels.com/photos/5980802/pexels-photo-5980802.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" width = "200" height = "320" alt="money graph">
 <p>
-    This project was initially created in my first year of university in my Project 1 module. The website was only created to be used as a template to be screenshotted as part of the group report for what a website of our project would look like. However, in my free time i decided to develop the website into a fully functioning currency converter where you can select any amount and any currency displayed on the website. 
-    </p>
-</div>
-
-<h3>Hotel bookings Project:</h3>
-<div class="hotel_bookings">
-<img src="https://images.unsplash.com/photo-1652461591693-30680b91d478?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGhvdGVsJTIwaHVkZGVyc2ZpZWxkfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" width = "200" height = "300" alt="hotel sign">
-<p>
-    This project was created in my second year of university for my Web Development module assignment. I was required to create a website that was connected to a database and upload the data that would be submitted from the form displayed on the website and save the information onto the database and then display the details submitted onto a separate page on the website. This website was created using HTML, CSS and mostly PHP. SQL was also used to gather/retrieve information to/from the database.
+    This project was initially created in my first year of university in my Project 1 module. The website was only created to be used as a template to be screenshotted as part of the group report for what a website of our project would look like. However, in my free time i decided to develop the website into a fully functioning currency converter where you can select any amount and any currency displayed on the website through the use of JavaScript 
 </p>
 </div>
+</div>
+
+<br>
+
+<h2>PHP:</h2>
+<br>
+
+<h3>Hotel Bookings Project:</h3>
+<div id="scrollPHP">
+<div class="hotel_bookings">
+<img src="https://images.unsplash.com/photo-1504652517000-ae1068478c59?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aG90ZWwlMjBzaWdufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" width = "200" height = "300" alt="hotel sign">
+<p>
+    This project was created in my second year of university for my Web Development final assignment. The website is connected to a database that would upload the data submitted from a form displayed on the website, it would then save the information onto the database and display the details submitted onto a separate page on the website. This website was created using HTML, CSS and PHP. (MY)SQL was used to gather/retrieve information to/from the database.
+</p>
+</div>
+</div>
+
+<br>
+
+<h2>Full-Stack:</h2>
+<br>
+
+<h3>Future Project Coming Soon!:</h3>
+<div id="scrollFullStack"></div>
+<div class="student_budgets">
+<img src="https://images.unsplash.com/photo-1594904351111-a072f80b1a71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8Y29kZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" width = "200" height = "300" alt="placeholder">
+<p>
+    Coming soon!
+</p>
+</div>
+</div>
+<!-- 
+<div class="dates">
+
+<div id="date">
+
+
+</div>
+</div> -->
 
 <div></div>
-<script src="js/portfolio.js"></script>
+<script src="portfolio.js"></script>
 </body>
